// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.domain.api.v0;

// Just used in tests
service HelloService {
  rpc Hello(Hello.Request) returns (Hello.Response) {}
  rpc HelloStreamed(Hello.Request) returns (stream Hello.Response) {}
}

message Hello {
  message Request {
    string msg = 1;
  }
  message Response {
    string msg = 1;
  }
}
